solve the hosting issue

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://tayyab2002.github.io/Portfolio-using-React-Tailwind/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
